--- a/nginx_configs/albs.conf
+++ b/nginx_configs/albs.conf
@@ -6,6 +6,10 @@ upstream frontend {
     server frontend:8080;
 }
 
+upstream pulp {
+    server pulp:80;
+}
+
 map $http_upgrade $connection_upgrade {
     default upgrade;
     '' close;
@@ -23,5 +27,9 @@ server {
 
     location /api/v1/ {
         proxy_pass http://backend;
+    }
+
+    location /pulp/ {
+        proxy_pass http://pulp;
     }
 }
