--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,17 @@ services:
     depends_on:
       - web_server
 
+  git_cacher:
+    image: albs-git-cacher:latest
+    env_file:
+      - vars.env
+    build:
+      context: ./alws/scripts/git_cacher
+      dockerfile: Dockerfile
+    restart: on-failure
+    depends_on:
+      - redis
+
   pulp:
     image: pulp/pulp
     ports:
@@ -73,6 +84,12 @@ services:
       - "./volumes/pulp/containers:/var/lib/containers"
     devices:
       - "/dev/fuse"
+    restart: on-failure
+
+  redis:
+    image: redis
+    ports:
+      - 6379:6379
     restart: on-failure
 
   nginx:
