--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi[all]==0.68.1
 uvicorn==0.13.4
 asyncpg==0.24.0
+psycopg2-binary==2.9.1
 pydantic==1.8.2
 SQLAlchemy==1.4.25
 aiohttp==3.7.4.post0
