--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -72,3 +72,7 @@
       name: centos8-highavailability
       url: http://centos.osuosl.org/8/HighAvailability/ppc64le/os/
       type: rpm
+    - arch: ppc64le
+      name: alma8-ppc64le-devel
+      url: https://repo.almalinux.org/development/almalinux/8/devel/ppc64le/os/
+      type: rpm
