--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,6 +115,23 @@ services:
     depends_on:
       - web_server
 
+  sign_node:
+    image: albs-sign-node:latest
+    privileged: true
+    env_file:
+      - vars.env
+    build:
+      # TODO: Hack for developement, put https://github.com/AlmaLinux/albs-node here instead
+      context: ../albs-sign-node
+      dockerfile: Dockerfile
+    volumes:
+      # TODO: Hack for developement, put placeholder here instead
+      - "../albs-sign-node/node-config:/root/.config"
+    restart: on-failure
+    command: "bash -c '/wait_for_it.sh web_server:8000 && source env/bin/activate && ./almalinux_sign_node.py -v'"
+    depends_on:
+      - web_server
+
   gitea_listener:
     image: albs-gitea-listener:latest
     env_file:
