--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,11 @@ services:
       context: .
     volumes:
       - "./alws:/code/alws"
-    # TODO: prepare to deal with migrations and so on
-    #       and database inititialisation
-    command: "bash -c 'source env/bin/activate && /wait_for_it.sh db:5432 && PYTHONPATH='.' python alws/models.py && uvicorn --host 0.0.0.0 alws.app:app'"
+    command:
+        bash -c 'source env/bin/activate &&
+                 /wait_for_it.sh db:5432 &&
+                 PYTHONPATH="." alembic --config alws/alembic.ini upgrade head &&
+                 uvicorn --host 0.0.0.0 alws.app:app'
     restart: on-failure
     depends_on:
       - db
