--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,7 +109,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       # TODO: Hack for developement, put placeholder here instead
-      - "../albs-node/node-config:/root/.config"
+      - "../albs-node/node-config:/home/alt/.config"
     restart: on-failure
     command: "bash -c '/wait_for_it.sh web_server:8000 && source env/bin/activate && ./almalinux_build_node.py -v -t 4'"
     depends_on:
@@ -138,7 +138,7 @@ services:
       - redis
 
   pulp:
-    image: pulp/pulp:3.15
+    image: pulp/pulp
     ports:
       - 8081:80
     volumes:
