--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -3,6 +3,9 @@
   distr_type: rhel
   distr_version: '8'
   test_dist_name: almalinux
+  dist_prefix:
+    modified: a8
+    non_modified: c8
   type: rpm
   arch_list:
     - i686
@@ -76,4 +79,8 @@
     - arch: ppc64le
       name: alma8-ppc64le-devel
       url: https://repo.almalinux.org/development/almalinux/8/devel/ppc64le/os/
+      type: rpm
+    - arch: ppc64le
+      name: alma8-distribution-ppc64le
+      url: https://build.almalinux.org/pulp/content/builds/almalinux8-AlmaLinux-8-ppc64le-dr/
       type: rpm
