--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,8 +125,9 @@ services:
       context: ../albs-sign-node
       dockerfile: Dockerfile
     volumes:
-      # TODO: Hack for developement, put placeholder here instead
       - "../albs-sign-node/node-config:/root/.config"
+      - "${HOME}/.gnupg:/root/.gnupg"
+      - "${HOME}/.gnupg:/home/alt/.gnupg"
     restart: on-failure
     command: "bash -c '/wait_for_it.sh web_server:8000 && source env/bin/activate && ./almalinux_sign_node.py -v'"
     depends_on:
