Fixed repositories URLs to use repo.almalinux.org

--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -41,7 +41,7 @@
     - arch: i686
       name: almalinux-8-baseos
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/BaseOS/i686/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/BaseOS/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -49,7 +49,7 @@
     - arch: i686
       name: almalinux-8-appstream
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/AppStream/i686/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/AppStream/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -57,7 +57,7 @@
     - arch: i686
       name: almalinux-8-powertools
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/PowerTools/i686/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/PowerTools/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -65,7 +65,7 @@
     - arch: x86_64
       name: almalinux-8-baseos
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/BaseOS/x86_64/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/BaseOS/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -73,7 +73,7 @@
     - arch: x86_64
       name: almalinux-8-appstream
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/AppStream/x86_64/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/AppStream/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -81,7 +81,7 @@
     - arch: x86_64
       name: almalinux-8-powertools
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/PowerTools/x86_64/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/PowerTools/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -89,7 +89,7 @@
     - arch: aarch64
       name: almalinux-8-baseos
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/BaseOS/aarch64/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/BaseOS/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -97,7 +97,7 @@
     - arch: aarch64
       name: almalinux-8-appstream
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/AppStream/aarch64/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/AppStream/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -105,7 +105,7 @@
     - arch: aarch64
       name: almalinux-8-powertools
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/PowerTools/aarch64/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/PowerTools/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
