--- a/reference_data/platforms_dev.yaml
+++ b/reference_data/platforms_dev.yaml
@@ -37,7 +37,7 @@
     - arch: i686
       name: almalinux-8-baseos
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/BaseOS/i686/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/BaseOS/i686/os/
       production: true
       debug: false
       remote_sync_policy: streamed
@@ -45,7 +45,7 @@
     - arch: i686
       name: almalinux-8-appstream
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/AppStream/i686/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/AppStream/i686/os/
       production: true
       debug: false
       remote_sync_policy: streamed
@@ -53,7 +53,7 @@
     - arch: i686
       name: almalinux-8-powertools
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/PowerTools/i686/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/PowerTools/i686/os/
       production: true
       debug: false
       remote_sync_policy: streamed
@@ -61,7 +61,7 @@
     - arch: x86_64
       name: almalinux-8-baseos
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/BaseOS/x86_64/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/BaseOS/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: streamed
@@ -69,7 +69,7 @@
     - arch: x86_64
       name: almalinux-8-appstream
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/AppStream/x86_64/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/AppStream/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: streamed
@@ -77,7 +77,7 @@
     - arch: x86_64
       name: almalinux-8-powertools
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/PowerTools/x86_64/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/PowerTools/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: streamed
@@ -85,7 +85,7 @@
     - arch: aarch64
       name: almalinux-8-baseos
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/BaseOS/aarch64/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/BaseOS/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: streamed
@@ -93,7 +93,7 @@
     - arch: aarch64
       name: almalinux-8-appstream
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/AppStream/aarch64/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/AppStream/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: streamed
@@ -101,7 +101,7 @@
     - arch: aarch64
       name: almalinux-8-powertools
       type: rpm
-      remote_url: https://koji.cloudlinux.com/cloudlinux/almalinux/8/PowerTools/aarch64/os/
+      remote_url: https://repo.almalinux.org/almalinux/8/PowerTools/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: streamed
