--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,8 @@ services:
       context: .
     volumes:
       - "./alws:/code/alws"
+      - "./scripts:/code/scripts"
+      - "./reference_data:/code/reference_data"
     command:
         bash -c 'source env/bin/activate &&
                  /wait_for_it.sh db:5432 &&
@@ -111,7 +113,7 @@ services:
       # TODO: Hack for developement, put placeholder here instead
       - "../albs-node/node-config:/home/alt/.config"
     restart: on-failure
-    command: "bash -c '/wait_for_it.sh web_server:8000 && source env/bin/activate && ./almalinux_build_node.py -v -t 1'"
+    command: "bash -c '/wait_for_it.sh web_server:8000 && source env/bin/activate && ./almalinux_build_node.py -v -t 2'"
     depends_on:
       - web_server
 
