--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,7 +93,7 @@ services:
       dockerfile: Dockerfile
       # TODO: Hack for developement, put https://github.com/AlmaLinux/albs-frontend here instead
       context: ../albs-frontend
-    command: "npm run dev"
+    command: bash -c "npm install && npm run dev"
     volumes:
       - "../albs-frontend:/code"
     restart: on-failure
