--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -3,10 +3,19 @@
   distr_type: rhel
   distr_version: '8'
   test_dist_name: almalinux
-  #module_dist_prefix:
-  #  modified: a8
-  #  non_modified: c8
-  module_version_prefix: '80400'
+  modularity:
+    modified_packages_url: 'https://git.almalinux.org/almalinux/modified_packages/raw/branch/main/modified_packages.yml'
+    packages_git: 'https://git.almalinux.org/rpms/'
+    git_tag_prefix:
+      modified: a8
+      non_modified: c8
+    versions:
+      - name: '8.4'
+        version_prefix: '80400'
+        dist_prefix: 'el8.4.0'
+      - name: '8.5'
+        version_prefix: '80500'
+        dist_prefix: 'el8.5.0'
   type: rpm
   arch_list:
     - i686
@@ -41,7 +50,7 @@
     - arch: i686
       name: almalinux-8-baseos
       type: rpm
-      remote_url: https://repo.almalinux.org/almalinux/8/BaseOS/i686/os/
+      remote_url: https://repo.almalinux.org/vault/8/BaseOS/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -49,7 +58,7 @@
     - arch: i686
       name: almalinux-8-appstream
       type: rpm
-      remote_url: https://repo.almalinux.org/almalinux/8/AppStream/i686/os/
+      remote_url: https://repo.almalinux.org/vault/8/AppStream/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -57,7 +66,7 @@
     - arch: i686
       name: almalinux-8-powertools
       type: rpm
-      remote_url: https://repo.almalinux.org/almalinux/8/PowerTools/i686/os/
+      remote_url: https://repo.almalinux.org/vault/8/PowerTools/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
