--- a/Dockerfile.gitea-listener
+++ b/Dockerfile.gitea-listener
@@ -5,11 +5,11 @@ RUN mkdir -p /code && \
     yum install python3-virtualenv python38 -y && \
     yum clean all
 RUN curl https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh -o wait_for_it.sh && chmod +x wait_for_it.sh
-COPY ./albs-gitea-listener/requirements.txt /tmp/requirements.txt
+COPY ./alws/scripts/albs-gitea-listener/requirements.txt /tmp/requirements.txt
 RUN cd /code && virtualenv -p python3.8 env && source env/bin/activate \
     && pip3 install -r /tmp/requirements.txt --no-cache-dir
-COPY ./albs-gitea-listener/* /code/
-COPY ./git_cacher/git_cacher.py /code/
+COPY ./alws/scripts/albs-gitea-listener/* /code/
+COPY ./alws/scripts/git_cacher/git_cacher.py /code/
 COPY ./alws /code/alws
 WORKDIR /code
 CMD ["/bin/bash", "-c", "source env/bin/activate && python gitea_listener.py"]
