--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -70,6 +70,38 @@
       debug: false
       remote_sync_policy: on_demand
       repository_sync_policy: additive
+    - arch: i686
+      name: almalinux-8-highavailability
+      type: rpm
+      remote_url: https://repo.almalinux.org/vault/8/HighAvailability/i686/os/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: i686
+      name: almalinux-8-resilientstorage
+      type: rpm
+      remote_url: https://repo.almalinux.org/vault/8/ResilientStorage/i686/os/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: i686
+      name: almalinux-8-devel
+      type: rpm
+      remote_url: https://repo.almalinux.org/vault/8/devel/i686/os/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: i686
+      name: almalinux-8-extras
+      type: rpm
+      remote_url: https://repo.almalinux.org/vault/8/extras/i686/os/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
     - arch: x86_64
       name: almalinux-8-baseos
       type: rpm
@@ -94,6 +126,38 @@
       debug: false
       remote_sync_policy: on_demand
       repository_sync_policy: additive
+    - arch: x86_64
+      name: almalinux-8-highavailability
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/HighAvailability/x86_64/os/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: x86_64
+      name: almalinux-8-resilientstorage
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/ResilientStorage/x86_64/os/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: x86_64
+      name: almalinux-8-devel
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/devel/x86_64/os/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: x86_64
+      name: almalinux-8-extras
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/extras/x86_64/os/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
     - arch: aarch64
       name: almalinux-8-baseos
       type: rpm
@@ -114,6 +178,38 @@
       name: almalinux-8-powertools
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/PowerTools/aarch64/os/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: aarch64
+      name: almalinux-8-highavailability
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/HighAvailability/aarch64/os/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: aarch64
+      name: almalinux-8-resilientstorage
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/ResilientStorage/aarch64/os/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: aarch64
+      name: almalinux-8-devel
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/devel/aarch64/os/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: aarch64
+      name: almalinux-8-extras
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/extras/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -153,6 +249,38 @@
       debug: false
       remote_sync_policy: on_demand
       repository_sync_policy: additive
+    - arch: src
+      name: almalinux-8-highavailability
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/HighAvailability/Source/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: src
+      name: almalinux-8-resilientstorage
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/ResilientStorage/Source/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: src
+      name: almalinux-8-devel
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/devel/Source/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: src
+      name: almalinux-8-extras
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/extras/Source/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
     - name: almalinux-8-baseos-debuginfo
       arch: x86_64
       type: rpm
@@ -175,6 +303,38 @@
       remote_url: https://repo.almalinux.org/almalinux/8/PowerTools/debug/x86_64/
       production: true
       debug: true
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: x86_64
+      name: almalinux-8-highavailability-debuginfo
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/HighAvailability/debug/x86_64/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: x86_64
+      name: almalinux-8-resilientstorage-debuginfo
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/ResilientStorage/debug/x86_64/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: x86_64
+      name: almalinux-8-devel-debuginfo
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/devel/debug/x86_64/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: x86_64
+      name: almalinux-8-extras-debuginfo
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/extras/debug/x86_64/
+      production: true
+      debug: false
       remote_sync_policy: on_demand
       repository_sync_policy: additive
     - name: almalinux-8-baseos-debuginfo
@@ -201,6 +361,39 @@
       debug: true
       remote_sync_policy: on_demand
       repository_sync_policy: additive
+    - arch: aarch64
+      name: almalinux-8-highavailability-debuginfo
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/HighAvailability/debug/aarch64/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: aarch64
+      name: almalinux-8-resilientstorage-debuginfo
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/ResilientStorage/debug/aarch64/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: aarch64
+      name: almalinux-8-devel-debuginfo
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/devel/debug/aarch64/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: aarch64
+      name: almalinux-8-extras-debuginfo
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8/extras/debug/aarch64/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+
 - name: AlmaLinux-9
   distr_type: rhel
   distr_version: '9'
