Added i686 arch repos

--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -288,6 +288,36 @@
       remote_url: http://mirror.facebook.net/centos-stream/9-stream/RT/x86_64/os/
       production: false
       debug: false
+    - arch: i686
+      name: centos-9-baseos
+      type: rpm
+      remote_url: http://mirror.facebook.net/centos-stream/9-stream/BaseOS/x86_64/os/
+      production: false
+      debug: false
+    - arch: i686
+      name: centos-9-appstream
+      type: rpm
+      remote_url: http://mirror.facebook.net/centos-stream/9-stream/AppStream/x86_64/os/
+      production: false
+      debug: false
+    - arch: i686
+      name: centos-9-crb
+      type: rpm
+      remote_url: http://mirror.facebook.net/centos-stream/9-stream/CRB/x86_64/os/
+      production: false
+      debug: false
+    - arch: i686
+      name: centos-9-highavailability
+      type: rpm
+      remote_url: http://mirror.facebook.net/centos-stream/9-stream/HighAvailability/x86_64/os/
+      production: false
+      debug: false
+    - arch: i686
+      name: centos-9-resilientrtorage
+      type: rpm
+      remote_url: http://mirror.facebook.net/centos-stream/9-stream/ResilientStorage/x86_64/os/
+      production: false
+      debug: false
     - arch: aarch64
       name: centos-9-baseos
       type: rpm
